[package]
name = "grisui-prelude-game"
version = "0.1.0"
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]

[dependencies]
vek = { git = "https://github.com/yoanlcq/vek", default-features = false, features = ["serde", "repr_simd", "vec2", "vec3", "rgb", "rgba", "extent2"] }
sdl2 = "0.31.0"
gl = "0.7.0"
alto = "3.0.0"
freetype-sys = "0.6.0"
serde = { version = "1.0.15", features = ["derive"] }
log = "0.4.0-rc.1"
env_logger = "0.5.0-rc.1"
